--- a/Yjsnpi/Yjsnpi.csproj
+++ b/Yjsnpi/Yjsnpi.csproj
@@ -39,6 +39,9 @@
       <Reference Include="UnityEngine.InputLegacyModule">
         <HintPath>libs\UnityEngine.InputLegacyModule.dll</HintPath>
       </Reference>
+      <Reference Include="UnityEngine.PhysicsModule">
+        <HintPath>libs\UnityEngine.PhysicsModule.dll</HintPath>
+      </Reference>
       <Reference Include="UnityEngine.TextRenderingModule">
         <HintPath>libs\UnityEngine.TextRenderingModule.dll</HintPath>
       </Reference>
