--- a/yajusense/yajusense.csproj
+++ b/yajusense/yajusense.csproj
@@ -65,4 +65,8 @@
     <ItemGroup>
       <None Remove="resources\shaderbundle.bundle" />
     </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="modern.bundle" />
+    </ItemGroup>
 </Project>
