--- a/yajusense/yajusense.csproj
+++ b/yajusense/yajusense.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
         <Folder Include="libs\"/>
+        <Folder Include="src\Modules\Player\" />
     </ItemGroup>
 
     <ItemGroup>
