--- a/yajusense/yajusense.csproj
+++ b/yajusense/yajusense.csproj
@@ -32,6 +32,9 @@
         <Reference Include="Il2CppSystem.Collections.Immutable">
             <HintPath>libs\Il2CppSystem.Collections.Immutable.dll</HintPath>
         </Reference>
+        <Reference Include="Localization.LocalizableString">
+          <HintPath>libs\Localization.LocalizableString.dll</HintPath>
+        </Reference>
         <Reference Include="Photon-DotNet">
             <HintPath>libs\Photon-DotNet.dll</HintPath>
         </Reference>
@@ -64,6 +67,9 @@
         </Reference>
         <Reference Include="VRC.Udon.VM">
             <HintPath>libs\VRC.Udon.VM.dll</HintPath>
+        </Reference>
+        <Reference Include="VRCCore-Standalone">
+          <HintPath>libs\VRCCore-Standalone.dll</HintPath>
         </Reference>
         <Reference Include="VRCSDK3">
             <HintPath>libs\VRCSDK3.dll</HintPath>
