--- a/yajusense/yajusense.csproj
+++ b/yajusense/yajusense.csproj
@@ -16,6 +16,8 @@
     <ItemGroup>
         <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.*" IncludeAssets="compile"/>
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*"/>
+        <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
+        <PackageReference Include="Vortice.Direct3D11" Version="3.7.4-beta" />
     </ItemGroup>
 
     <ItemGroup>
@@ -60,7 +62,7 @@
             <HintPath>libs\UnityEngine.TextRenderingModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.UnityWebRequestModule">
-          <HintPath>libs\UnityEngine.UnityWebRequestModule.dll</HintPath>
+            <HintPath>libs\UnityEngine.UnityWebRequestModule.dll</HintPath>
         </Reference>
         <Reference Include="VRC.Udon">
             <HintPath>libs\VRC.Udon.dll</HintPath>
